--- a/vue-cesium1/public/static/cesiumAssets/Widgets/widgets.css
+++ b/vue-cesium1/public/static/cesiumAssets/Widgets/widgets.css
@@ -305,7 +305,7 @@
   font-family: sans-serif;
   font-size: 8pt;
   text-align: center;
-  vertical-align: middle;
+  /* vertical-align: middle; */
   color: #edffff;
   cursor: pointer;
   word-wrap: break-word;
