--- a/vue-cesium1/src/style.css
+++ b/vue-cesium1/src/style.css
@@ -3,17 +3,18 @@
   margin: 0;
 }
 
-html, body {
-  width: 100%;
-  height: 100%;
-  overflow: hidden; /* 禁止滚动条 */
-}
+/*html, body {*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  overflow: hidden; !* 禁止滚动条 *!*/
+/*}*/
 
 #cesiumContainer {
   position: absolute;
   top: 0;
-  left: 0;
-  width: 100%;
+  left: 190px;
+  right:0;
+  /*width: 100%;*/
   height: 100%;
   overflow: hidden; /* 确保没有滚动条 */
 }
@@ -34,10 +35,10 @@ html, body {
 }
 #cesiumContainer .cesium-viewer-timeline {
   display: none; /* 隐藏 Cesium 默认时间轴 */
-}true
-#cesiumContainer .cesium-viewer-animation {
-  display: true; /* 隐藏 Cesium 默认动画控制器 */
 }
+/*#cesiumContainer .cesium-viewer-animation {*/
+/*  display: true; !* 隐藏 Cesium 默认动画控制器 *!*/
+/*}*/
 #cesiumContainer .cesium-viewer-fullscreen {
   display: none; /* 隐藏 Cesium 默认全屏按钮 */
 }
