--- a/vue-cesium1/src/style.css
+++ b/vue-cesium1/src/style.css
@@ -106,23 +106,24 @@
   top: 10px; /* 调整位置 */
   right: 10px;
   z-index: 10;/* 确保下拉框位于 Cesium 容器之上 */
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(255, 255, 255, 0.5);
   padding: 5px;
   border-radius: 4px;
 }
 
 #routeSelect {
   padding: 5px;
-  border: 1px solid #ccc;
+  border: 1px solid rgba(255, 255, 255);
   border-radius: 4px;
   width: 150px; /* 设置宽度 */
-  /* height: auto; 自动调整高度 */
+  background-color: rgba(255, 255, 255, 0);
 }
 
 #routeDropdown button {
   /*margin-top: 5px;*/
   padding: 5px 10px;
-  background-color: rgba(0, 0, 0, 0.6);
+  margin-left: 5px;
+  background-color: rgba(0, 0, 0, 0.5);
   color: white;
   border: none;
   border-radius: 4px;
@@ -167,7 +168,7 @@
   margin-left: 10px;
   padding: 5px 10px;
   background-color: rgba(0, 0, 0, 0.6);
-  color: rgb(60, 62, 155);
+  /*color: rgb(60, 62, 155);*/
   border: none;
   border-radius: 4px;
   cursor: pointer;
