--- a/vue-cesium1/src/style.css
+++ b/vue-cesium1/src/style.css
@@ -18,15 +18,15 @@
   height: 100%;
   overflow: hidden; /* 确保没有滚动条 */
 }
-#cesiumContainer .cesium-viewer-toolbar {
-  display: none; /* 隐藏 Cesium 默认工具栏 */
-}
+/*#cesiumContainer .cesium-viewer-toolbar {*/
+/*  display: none; !* 隐藏 Cesium 默认工具栏 *!*/
+/*}*/
 #cesiumContainer .cesium-viewer-bottom {
   display: none; /* 隐藏 Cesium 默认底部工具栏 */
 }
-#cesiumContainer .cesium-viewer-geocoder {
-  display: none; /* 隐藏 Cesium 默认搜索框 */
-}
+/*#cesiumContainer .cesium-viewer-geocoder {*/
+/*  display: none; !* 隐藏 Cesium 默认搜索框 *!*/
+/*}*/
 #cesiumContainer .cesium-viewer-credit {
   display: none; /* 隐藏 Cesium 默认版权信息 */
 }
