--- a/vue-cesium1/src/style.css
+++ b/vue-cesium1/src/style.css
@@ -3,19 +3,14 @@
   margin: 0;
 }
 
-/*html, body {*/
-/*  width: 100%;*/
-/*  height: 100%;*/
-/*  overflow: hidden; !* 禁止滚动条 *!*/
-/*}*/
-
 #cesiumContainer {
-  position: absolute;
+  position: activity;
   top: 0;
-  left: 190px;
+  /* left: 190px; */
   right:0;
   /*width: 100%;*/
-  height: 100%;
+  /* height: 100%; */
+  height: 100vh; 
   overflow: hidden; /* 确保没有滚动条 */
 }
 /*#cesiumContainer .cesium-viewer-toolbar {*/
