--- a/vue-cesium1/src/style.css
+++ b/vue-cesium1/src/style.css
@@ -39,10 +39,10 @@
 }
 #toggleRouteButton {
   position: absolute;
-  bottom: 10px; /* 距离容器底部 10px */
+  top: 5px; /* 距离容器底部 10px */
   right: 10px; /* 距离容器右侧 10px */
   z-index: 10; /* 确保按钮位于 Cesium 容器之上 */
-  padding: 5px 10px;
+  padding: 5px 5px;
   background-color: rgba(0, 0, 0, 0.6); /* 半透明背景 */
   color: white;
   border: none;
