--- a/vue-cesium1/src/style.css
+++ b/vue-cesium1/src/style.css
@@ -4,12 +4,9 @@
 }
 
 #cesiumContainer {
-  position: activity;
+  position: relative;
   top: 0;
-  /* left: 190px; */
   right:0;
-  /*width: 100%;*/
-  /* height: 100%; */
   height: 100vh; 
   overflow: hidden; /* 确保没有滚动条 */
 }
